# frequent-subgraph-mining

./: .gitignore  README.md  pyproject.toml
moss/: moss-usage.txt  out.sub
moss/input/: input.smiles  input2.smiles  input3.smiles
moss/output/: output.sub  output3.sub
moss_output/: input.g
src/frequent_subgraph_mining/: __init__.py  moss_feature_extractor.py  moss_feature_extractor_filtered_mean_edges_nodes.py  moss_feature_extractor_limited_edges.py  moss_feature_extractor_limited_edges_nodes.py
src/frequent_subgraph_mining/config/: __init__.py
tests/: test_baseline_model.py  test_compare_my_model_with_baseline_model.py  test_moss_feature_extractor_filtered_mean_edges_nodes_model.py  test_moss_feature_extractor_filtered_mean_edges_nodes_param_grid_model.py  test_moss_limited_edges_model.py  test_moss_limited_edges_nodes_model.py  test_moss_model.py  test_smile_files.py
