[tool.poetry]
name = "frequent-subgraph-mining"
version = "0.1.0"
description = ""
authors = ["miskowic <miskowicz@student..agh.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
deepchem = "^2.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
